bee-common/bee-packable-derive/tests/fail/invalid_packable_with.stderr
error[E0593]: function is expected to take 1 argument, but it takes 0 arguments
  --> $DIR/invalid_packable_with.rs:11:44
   |
11 | #[packable(pack_error = Impossible, with = Impossible::new)]
   |                                            ^^^^^^^^^^^^^^^ expected function that takes 1 argument
...
21 |     fn new() -> Self {
   |     ---------------- takes 0 arguments

error[E0593]: function is expected to take 1 argument, but it takes 0 arguments
  --> $DIR/invalid_packable_with.rs:12:46
   |
12 | #[packable(unpack_error = Impossible, with = Impossible::new)]
   |                                              ^^^^^^^^^^^^^^^ expected function that takes 1 argument
...
21 |     fn new() -> Self {
   |     ---------------- takes 0 arguments
